[package]
name = "poDTest"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.19", features = ["json"] }
sysinfo = "0.35.2"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
# scopeguard = "1.2"
ansi_term = "0.12"